--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "twbs/bootstrap": "^4.4",
-        "components/jquery": "^3.4"
+        "twbs/bootstrap": "3.4.1",
+        "components/jquery": "1.12.4"
     }
 }
